<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health App</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
	<string name="track_home">Track Your Health</string>
	<string name="login_twitter">Login to Twitter</string>
	<string name="login_facebook">Login to Facebook</string>
	<string name="create_account">Create An Account</string>
	<string name="name">Name</string>
	<string name="password">Password</string>
	<string name="username">Username</string>
	<string name="login">Login</string>
	<string name="profile_name">Person Name</string>
	<string name="current_health">Current Health Conditions</string>
	<string name="profile_extra">Extra Text</string>
	<string name="profile_stats">Health Stats</string>
</resources>